--- a/public/impressum.html
+++ b/public/impressum.html
@@ -26,12 +26,11 @@
         <div class="nav-basic">
             <nav class="container">
                 <div class="topnav">
-                    <li><a href="urlaub.html" class="links">Urlaubszeitraum</a></li>
-                    <li><a href="ziele.html" class="links">Ziele</a></li>
+                    <li><a href="index.html" class="links">Home</a></li>
+                    <li><a href="holiday.html" class="links">Urlaub</a></li>
+                    <li><a href="holidayWish.html" class="links">Urlaubswunsch</a></li>
                     <li><a href="family.html" class="links">Familienmitglieder</a></li>
-                    <li><a href="index.html" class="links">Priorisieren</a></li>
-
-                    <li><a href="https://earthroulette.com/" class="links">Interessante Orte</a></li>
+                    <li><a href="priority.html" class="links">Priorisieren</a></li>
                 </div>
 
             </nav>
