--- a/public/index.html
+++ b/public/index.html
@@ -1,86 +1,111 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyFamilyHolidayPlaner</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/stylesheet.css">
     <link rel="stylesheet" href="./css/dialoge.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
+    <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b30115917b.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+
 </head>
 
-
 <body>
-
-
-    <div>
-        <div class="header-basic">
-            <header>
-                <h1 class="topic">Home</h1>
-                <img class="background" src="./images/hintergrund.jpg">
-            </header>
-        </div>
-        <div class="nav-basic">
-            <nav class="container">
-                <div class="topnav">
-                    <li><a href="urlaub.html" class="links">Urlaubszeitraum</a></li>
-                    <li><a href="ziele.html" class="links">Ziele</a></li>
-                    <li><a href="family.html" class="links">Familienmitglieder</a></li>
-                    <li><a href="index.html" class="links">Priorisieren</a></li>
-
-                    <li><a href="https://earthroulette.com/" class="links">Interessante Orte</a></li>
-                </div>
-
-            </nav>
-        </div>
-        </figure>
-        <div class="addFamBtn">
-            <button id="famBtn">Anmelden</button>
-        </div>
-        <div class="article-content">
-            <div id="myModal" class="modal">
-                <div class="modal-content">
-                    <div class="page">
-                        <span class="close">&times;</span>
-                        <label for="choose" class="chooseText"> Wählen Sie aus wer Sie sind:</label>
-                        <select name="choose" id="chooseDrop">
-                            <option id="chooseOption" value='createDropOption'>Auswahl</option>
-                        </select>
-                        <button id="submitBtn" type="submit">Auswählen</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-
-        <div class="article-basic">
-            <div>
-                <div class="site-container">
-                    <div class="article-container" id="acontainer">
-                    </div>
-                </div>
-                <div class="cardFooter">
-                </div>
-            </div>
-        </div>
-
-
-        <div class="footer-basic">
-            <footer>
-                <p><a href="kontakt.html" id="kontakt">Kontakt</a></p>
-            </footer>
-        </div>
-
+    <div class="header-basic">
+        <header>
+            <h1 class="topic">Urlaubszeitraum</h1>
+            <img class="background" src="Images/hintergrund.jpg">
+        </header>
     </div>
-    <script src="js/main2.js"></script>
+    <div class="nav-basic">
+        <nav class="container">
+            <div class="topnav">
+                <li><a href="index.html" class="links">Home</a></li>
+                <li><a href="holiday.html" class="links">Urlaub</a></li>
+                <li><a href="holidayWish.html" class="links">Urlaubswunsch</a></li>
+                <li><a href="family.html" class="links">Familienmitglieder</a></li>
+                <li><a href="priority.html" class="links">Priorisieren</a></li>
+            </div>
+        </nav>
+    </div>
 
+
+
+    <div class="article-basic">
+        <div>
+            <div class="site-container">
+                <div class="article-container">
+                    <article class="article-card">
+                        <figure class="article-image">
+                            <img src="Images/FrühlingIcon.jpg" alt="Moschee" />
+                        </figure>
+                        <div class="article-content">
+                            <a href="holiday.html" class="card-category">Frühling</a>
+                            <h3 class="card-title"> Einen Urlaub im Frühjahr</h3>
+                            <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                                nihil
+                                expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                        </div>
+                    </article>
+
+                    <article class="article-card">
+                        <figure class="article-image">
+                            <img src="Images/SommerIcon.jpg" alt="Moschee" />
+                        </figure>
+                        <div class="article-content">
+                            <a href="holiday.html" class="card-category">Sommer</a>
+                            <h3 class="card-title"> Einen Urlaub im Sommer</h3>
+                            <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                                nihil
+                                expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                        </div>
+                    </article>
+                    <article class="article-card">
+                        <figure class="article-image">
+                            <img src="Images/HerbstIcon.jpg" alt="Moschee" />
+                        </figure>
+                        <div class="article-content">
+                            <a href="holiday.html" class="card-category">Herbst</a>
+                            <h3 class="card-title"> Einen Urlaub im Herbst</h3>
+                            <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                                nihil
+                                expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                        </div>
+                    </article>
+                    <article class="article-card">
+                        <figure class="article-image">
+                            <img src="Images/WinterIcon.jpg " alt="Moschee" />
+                        </figure>
+                        <div class="article-content">
+                            <a href="holiday.html" class="card-category">Winter</a>
+                            <h3 class="card-title"> Einen Urlaub im Winter</h3>
+                            <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                                nihil
+                                expedita tempora eligendi, officiis nesciunt vero qui?</p>
+                        </div>
+                    </article>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-basic">
+        <footer>
+            <p><a href="impressum.html" id="kontakt">Kontakt</a></p>
+
+
+        </footer>
+    </div>
 
 
 
 </body>
-
 
 </html>
