--- a/public/family.html
+++ b/public/family.html
@@ -49,7 +49,7 @@
 
                     <article class="article-card">
                         <figure class="article-image">
-                            <a href="#" class="addFamilymember" onclick="dialogOeffnen('addWindow-dialog')">
+                            <a href="#" class="addWindow" onclick="dialogOeffnen('addWindow-dialog')">
                                 <img src="./images/greyPlus.png" alt="Add Familymember" />
                         </figure>
                         <div class="article-content">
@@ -100,9 +100,8 @@
 
     <div class="footer-basic">
         <footer>
-            <p><a href="impressum.html" id="kontakt">Kontakt</a></p>
-
-
+            <p> <a href="impressum.html" class="kontaktLink" id="kontakt">Kontakt </a></p>
+            <p class="copyright">Wi Gruppe © 2018</p>
         </footer>
     </div>
 
