--- a/public/impressum.html
+++ b/public/impressum.html
@@ -93,12 +93,17 @@
 
 
 
-
-
-                        </footer>
                     </div>
 
                 </div>
+
+                <div class="footer-basic">
+                    <footer>
+                        <p> <a href="impressum.html" class="kontaktLink" id="kontakt">Kontakt </a></p>
+                        <p class="copyright">Wi Gruppe © 2018</p>
+                    </footer>
+                </div>
+
 
 
 </body>
