--- a/public/index.html
+++ b/public/index.html
@@ -96,13 +96,14 @@
         </div>
     </div>
 
+
     <div class="footer-basic">
         <footer>
-            <p><a href="impressum.html" id="kontakt">Kontakt</a></p>
-
-
+            <p> <a href="impressum.html" class="kontaktLink" id="kontakt">Kontakt </a></p>
+            <p class="copyright">Wi Gruppe © 2018</p>
         </footer>
     </div>
+
 
 
 
