--- a/public/priority.html
+++ b/public/priority.html
@@ -70,12 +70,12 @@
 
         <div class="footer-basic">
             <footer>
-                <p><a href="impressum.html" id="kontakt">Kontakt</a></p>
+                <p> <a href="impressum.html" class="kontaktLink" id="kontakt">Kontakt </a></p>
+                <p class="copyright">Wi Gruppe © 2018</p>
             </footer>
         </div>
 
-    </div>
-    <script src="css/maybeUseless/main.js"></script>
+        <script src="css/maybeUseless/main.js"></script>
 
 
 
