--- a/public/holiday.html
+++ b/public/holiday.html
@@ -7,6 +7,8 @@
     <title>MyFamilyHolidayPlaner</title>
     <link rel="stylesheet" href="./css/stylesheet.css">
     <link rel="stylesheet" href="./css/dialoge.css">
+    <link rel="stylesheet" href="./css/famsheet.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
     <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b30115917b.js" crossorigin="anonymous"></script>
@@ -20,7 +22,7 @@
     <div class="header-basic">
         <header>
             <h1 class="topic">Urlaub</h1>
-            <img class="background" src="Images/hintergrund.jpg">
+            <img class="background" src="Images/holidaycollage.jpg">
         </header>
     </div>
     <div class="nav-basic">
@@ -35,7 +37,6 @@
         </nav>
     </div>
     <div class="addFamBtn">
-        <button id="famBtn">Anmelden</button>
     </div>
     <div class="article-content">
         <div id="myModal" class="modal">
@@ -46,7 +47,7 @@
                     <select name="choose" id="chooseDrop">
                         <option id="chooseOption" value='createDropOption'>Auswahl</option>
                     </select>
-                    <button id="submitBtn" type="submit">Auswählen</button>
+                    <button id="submitBtn" class="submitBtnHoliday" type="submit">Auswählen</button>
                 </div>
             </div>
         </div>
@@ -137,9 +138,8 @@
 
     <div class="footer-basic">
         <footer>
-            <p><a href="impressum.html" id="kontakt">Kontakt</a></p>
-
-
+            <p> <a href="impressum.html" class="kontaktLink" id="kontakt">Kontakt </a></p>
+            <p class="copyright">Wi Gruppe © 2018</p>
         </footer>
     </div>
 
