--- a/public/holidayWish.html
+++ b/public/holidayWish.html
@@ -7,6 +7,8 @@
     <title>MyFamilyHolidayPlaner</title>
     <link rel="stylesheet" href="./css/stylesheet.css">
     <link rel="stylesheet" href="./css/dialoge.css">
+    <link rel="stylesheet" href="./css/famsheet.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
     <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b30115917b.js" crossorigin="anonymous"></script>
@@ -61,7 +63,7 @@
                 <article class="article-card" id="article-cards">
 
                     <figure class="article-image">
-                        <a href="#" class="addFamilymember" onclick="dialogOeffnen('addWindow-dialog')">
+                        <a href="#" class="addWindow" onclick="dialogOeffnen('addWindow-dialog')">
                             <img src="./images/greyPlus.png" class="addZiele" />
                     </figure>
                     <div class="article-content">
@@ -120,12 +122,10 @@
             </div>
         </div>
     </div>
-
     <div class="footer-basic">
         <footer>
-            <p><a href="impressum.html" id="kontakt">Kontakt</a></p>
-
-
+            <p> <a href="impressum.html" class="kontaktLink" id="kontakt">Kontakt </a></p>
+            <p class="copyright">Wi Gruppe © 2018</p>
         </footer>
     </div>
 
