--- a/public/family.html
+++ b/public/family.html
@@ -12,8 +12,7 @@
     <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b30115917b.js" crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 
 
@@ -25,7 +24,7 @@
     <div class="header-basic">
         <header>
             <h1 class="topic">Familienmitglieder</h1>
-            <img class="background" src="./images/hintergrund.jpg">
+            <img class="background" src="./images/holidaycollage.jpg">
         </header>
     </div>
     <div class="nav-basic">
