--- a/public/holidayWish.html
+++ b/public/holidayWish.html
@@ -12,8 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
     <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b30115917b.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 
 </head>
@@ -22,7 +21,7 @@
     <div class="header-basic">
         <header>
             <h1 class="topic">Urlaubswunsch</h1>
-            <img class="background" src="Images/hintergrund.jpg">
+            <img class="background" src="Images/holidaycollage.jpg">
         </header>
     </div>
     <div class="nav-basic">
@@ -78,8 +77,7 @@
 
                 <div id="body-overlay"></div>
                 <div class="dialog" id="addWindow-dialog">
-                    <a href="#" role="button" class="dialog-schliessen-button"
-                        onclick="dialogSchliessen('addWindow-dialog')">
+                    <a href="#" role="button" class="dialog-schliessen-button" onclick="dialogSchliessen('addWindow-dialog')">
                         <i class="fa-regular fa-circle-xmark"></i>
                     </a>
                     <h3>Urlaubswunsch Hinzufügen</h3>
@@ -102,8 +100,7 @@
                 </div>
                 <div id="body-overlay"></div>
                 <div class="dialog" id="editWindow-dialog">
-                    <a href="#" role="button" class="dialog-schliessen-button"
-                        onclick="dialogSchliessen('editWindow-dialog')">
+                    <a href="#" role="button" class="dialog-schliessen-button" onclick="dialogSchliessen('editWindow-dialog')">
                         <i class="fa-regular fa-circle-xmark"></i>
                     </a>
                     <h3>Urlaubswunsch Bearbeiten</h3>
