--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
     <title>MyFamilyHolidayPlaner</title>
     <link rel="stylesheet" href="./css/stylesheet.css">
     <link rel="stylesheet" href="./css/dialoge.css">
+    <link rel="stylesheet" href="./css/famsheet.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap" rel="stylesheet">
     <link href="fontawesome-free-5.15.1-web/fontawesome-free-5.15.1-web/css/all-css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b30115917b.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 
 </head>
@@ -19,8 +20,8 @@
 <body>
     <div class="header-basic">
         <header>
-            <h1 class="topic">Urlaubszeitraum</h1>
-            <img class="background" src="Images/hintergrund.jpg">
+            <h1 class="topic">Urlaubswunsch</h1>
+            <img class="background" src="Images/holidaycollage.jpg">
         </header>
     </div>
     <div class="nav-basic">
@@ -34,69 +35,72 @@
             </div>
         </nav>
     </div>
-
-
-
-    <div class="article-basic">
-        <div>
-            <div class="site-container">
-                <div class="article-container">
-                    <article class="article-card">
-                        <figure class="article-image">
-                            <img src="Images/FrühlingIcon.jpg" alt="Moschee" />
-                        </figure>
-                        <div class="article-content">
-                            <a href="holiday.html" class="card-category">Frühling</a>
-                            <h3 class="card-title"> Einen Urlaub im Frühjahr</h3>
-                            <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-                                nihil
-                                expedita tempora eligendi, officiis nesciunt vero qui?</p>
-                        </div>
-                    </article>
-
-                    <article class="article-card">
-                        <figure class="article-image">
-                            <img src="Images/SommerIcon.jpg" alt="Moschee" />
-                        </figure>
-                        <div class="article-content">
-                            <a href="holiday.html" class="card-category">Sommer</a>
-                            <h3 class="card-title"> Einen Urlaub im Sommer</h3>
-                            <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-                                nihil
-                                expedita tempora eligendi, officiis nesciunt vero qui?</p>
-                        </div>
-                    </article>
-                    <article class="article-card">
-                        <figure class="article-image">
-                            <img src="Images/HerbstIcon.jpg" alt="Moschee" />
-                        </figure>
-                        <div class="article-content">
-                            <a href="holiday.html" class="card-category">Herbst</a>
-                            <h3 class="card-title"> Einen Urlaub im Herbst</h3>
-                            <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-                                nihil
-                                expedita tempora eligendi, officiis nesciunt vero qui?</p>
-                        </div>
-                    </article>
-                    <article class="article-card">
-                        <figure class="article-image">
-                            <img src="Images/WinterIcon.jpg " alt="Moschee" />
-                        </figure>
-                        <div class="article-content">
-                            <a href="holiday.html" class="card-category">Winter</a>
-                            <h3 class="card-title"> Einen Urlaub im Winter</h3>
-                            <p class="card-excerpt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-                                nihil
-                                expedita tempora eligendi, officiis nesciunt vero qui?</p>
-                        </div>
-                    </article>
-
+    <!-- <div class="addFamBtn">
+        <button id="famBtn">Anmelden</button>
+    </div>
+    <div class="article-content">
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <div class="page">
+                    <span class="close">&times;</span>
+                    <label for="choose" class="chooseText"> Wählen Sie aus wer Sie sind:</label>
+                    <select name="choose" id="chooseDrop">
+                        <option id="chooseOption" value='createDropOption'>Auswahl</option>
+                    </select>
+                    <button id="submitBtn" type="submit">Auswählen</button>
                 </div>
             </div>
         </div>
+    </div> -->
+
+
+    <div class="article-basic">
+        <div class="site-container">
+            <div class="article-container" id="acontainer">
+                <div id="body-overlay"></div>
+                <div class="dialog" id="addWindow-dialog">
+                    <a href="#" role="button" class="dialog-schliessen-button" onclick="dialogSchliessen('addWindow-dialog')">
+                        <i class="fa-regular fa-circle-xmark"></i>
+                    </a>
+                    <h3>Urlaubswunsch Hinzufügen</h3>
+
+                    <a class="addWindow-dialog-daten">
+                        <form id="createHolidayWish" action="" onsubmit="createHolidayWish()">
+                            <select name="choose" id="chooseDrop">
+                                <option id="chooseOption" value='createDropOption'>Auswahl</option>
+                            </select>
+                            <input type="text" placeholder="Ort" id="locationTag" class="eingabefeld">
+                            <input type="text" placeholder="beschreibung" id="descriptionTag" class="eingabefeld">
+
+
+
+                            <button type="submit" id="submitBtn">Hinzufügen!</button>
+
+
+                        </form>
+                    </a>
+                </div>
+                <div id="body-overlay"></div>
+                <div class="dialog" id="editWindow-dialog">
+                    <a href="#" role="button" class="dialog-schliessen-button" onclick="dialogSchliessen('editWindow-dialog')">
+                        <i class="fa-regular fa-circle-xmark"></i>
+                    </a>
+                    <h3>Urlaubswunsch Bearbeiten</h3>
+
+                    <a class="editWindow-dialog-daten">
+                        <form id="editHoliday-wish" action="">
+                            <input type="text" placeholder="Ort" id="locationTag" class="eingabefeld">
+                            <input type="text" placeholder="beschreibung" id="descriptionTag" class="eingabefeld">
+                            <button type="submit">Bearbeiten!</button>
+                        </form>
+                    </a>
+                </div>
+
+
+
+            </div>
+        </div>
     </div>
-
-
     <div class="footer-basic">
         <footer>
             <p> <a href="impressum.html" class="kontaktLink" id="kontakt">Kontakt </a></p>
@@ -104,6 +108,8 @@
         </footer>
     </div>
 
+    <script src="./js/dialoge.js"></script>
+    <script src="./js/index.js"></script>
 
 
 
