--- a/public/priority.html
+++ b/public/priority.html
@@ -20,7 +20,7 @@
         <div class="header-basic">
             <header>
                 <h1 class="topic">Priorisieren</h1>
-                <img class="background" src="./images/hintergrund.jpg">
+                <img class="background" src="./images/holidaycollage.jpg">
             </header>
         </div>
         <div class="nav-basic">
