ungenutze dateien gelöscht

--- a/public/priority.html
+++ b/public/priority.html
@@ -75,7 +75,7 @@
             </footer>
         </div>
 
-        <script src="css/maybeUseless/main.js"></script>
+        <script src="js/main.js"></script>
 
 
 
